[package]
name = "blissb"
version = "0.2.1"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum signature schemes - BLISS-B."
repository = "https://github.com/quininer/blissb"
license = "MIT"

[dependencies]
rand = "0.3"
tiny-keccak = "1.1"
byteorder = "1.0"
bitpack = "0.1"

[features]
default = [ "i" ]
o = []
i = []
ii = []
iii = []
iv = []
