[package]
name = "blissb"
version = "0.2.3"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum signature schemes - BLISS-B."
repository = "https://github.com/quininer/blissb"
license = "MIT"

[dependencies]
rand = "0.3"
tiny-keccak = "1.1"
byteorder = "1.0"
bitpack = "0.2"

[features]
default = [ "i" ]
i = []
ii = []
iii = []
iv = []
